@@ -1,18 +1,18 @@
 ## $Id$
-# am/bin_links.am: Makefile fragment for bindir links.
-#
-# Copyright 2017-2020 Karl Berry <tex-live@tug.org>
-# Copyright 2011-2013 Peter Breitenlohner <tex-live@tug.org>
-# You may freely use, modify and/or distribute this file.
-#
-# requires conditional WIN32
-# requires $(bin_links)
-# Symlinks within $(bindir): FILE:LINK indicates LINK->FILE
-#  for binaries and scripts use, e.g.,
-#    binprog$(EXEEXT):foo
-#    script:bar
-#  respectively, such that the links created on cygwin are
-#    'foo->binprog.exe' and 'bar->script'.
+## am/bin_links.am: Makefile fragment for bindir links.
+##
+## Copyright 2017-2022 Karl Berry <tex-live@tug.org>
+## Copyright 2011-2013 Peter Breitenlohner <tex-live@tug.org>
+## You may freely use, modify and/or distribute this file.
+##
+## requires conditional WIN32
+## requires $(bin_links)
+## Symlinks within $(bindir): FILE:LINK indicates LINK->FILE
+##  for binaries and scripts use, e.g.,
+##    binprog$(EXEEXT):foo
+##    script:bar
+##  respectively, such that the links created on cygwin are
+##    'foo->binprog.exe' and 'bar->script'.
 
 .PHONY: install-bin-links uninstall-bin-links
 
@@ -37,3 +37,4 @@ if !WIN32
 	done
 endif !WIN32
 
+# (end of bin_links.am)
